# GitRot

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  MIGRATION_README.md  README.md  STREAMLIT_VS_FASTAPI.md  ads.txt  api_helper.py  app.py  docker-build.sh  docker-compose.yml  docker-run.sh  entry_page.py  fastapi_app.py  generators.py  gitrot_brain.py  helpers.py  main.py  pyproject.toml  requirements.txt  start-dev.sh  start.sh  startup-azure-fullstack.sh  startup-azure.sh  startup.sh  startup_fastapi.sh  test_configuration.py
.github/: CODEOWNERS
.github/workflows/: build-deploy-k8s.yml  deploy-dockerhub.yml  deploy-k8s.yml  main_gitrot.yml  push_to_dockerhub.yml
backend/: .dockerignore  .env.example  Dockerfile  app.py  fastapi_app.py  generators.py  gitrot_brain.py  helpers.py  requirements.txt  retry_state.json
backend/backend-docs/: code-elements.md
backend/config/: model_config.py  model_credential_factory.py
backend/database/: config.py  models.py
backend/examples/: README (1).md
backend/http/: users.http
backend/models/: __init__.py  request_models.py  user_model.py
backend/services/: __init__.py  user_service.py
backend/tests/: test_model_credential_factory.py  test_readme_generator_e2e.py
backend/utils/: __init__.py  token_utils.py
backend/wrappers/: rate_limitter.py
examples/: README (2).md
gitrot-frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  tailwind.config.js
scripts/: README.md  docker-helper.sh  setup.sh
static/: styles.css
templates/: home_page.html
tests/: __init__.py
(+34 files in other folders)
